# stream-audio-fingerprint

./: .eslintrc.js  .gitignore  .travis.yml  Cargo.toml  README.md  codegen_demo.js  codegen_landmark.js  demo.js  demo.ts  package-lock.json  package.json  tsconfig.json
benchmark/: benchmark_00_install.sh  benchmark_01_time.sh  benchmark_02_memory.sh  report-medium-file.md  report-small-file.md
lib/: index.d.ts  index.js  index.ts  plot_tools.d.ts  plot_tools.ts
rs-landmark/: Cargo.toml
rs_landmark/: .gitignore  Cargo.toml
rs_landmark/examples/: async-stdin.rs  ffmpeg-pipe-1-sync.rs  ffmpeg-pipe-2-async-wrapper.rs  stream-1-file-lines-async.rs  stream-2-gzipfile.rs  stream-3-ffmpeg-pipe-read.rs  stream-3-ffmpeg.rs  stream-4-ffmpeg-pipe-read-buffered.rs  stream-5-ffmpeg-direct-read.rs  stream-6-ffmpeg-direct-read-buffered.rs  stream_ffmpeg_decoder.rs  sync-stdin-ffmpeg.rs  sync-stdin.rs  sync-stdin_no_stdout_read.rs  sync-stdin_ok_stdout_read.rs  wc-pipe-sync-1.rs  wc-pipe-sync-2-binary.rs  wc-pipe-sync-3-no-read-stdout.rs
rs_landmark/src/: common.rs  lib.rs  main.rs  runner.rs  stdin.rs  test-file.txt
