[package]
name = "rs_landmark"
version = "0.1.0"
authors = ["killzoner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
md-5 = "0.8.0"
rustfft = "3.0.1"
log = "0.4.8"
simple_logger = "1.6.0"
clap = "2.33.0"
bytes = "0.5.4"
flate2 = "1.0.13"
byteorder = "1.3.4"
num-traits = "0.2.11"

[dependencies.async-std]
version = "1.5.0"
features = ["unstable"]

[dependencies.async-compression]
version = "0.3.1"
#features = ["all"]
features = ["stream", "gzip"]
