[package]
name = "rs_landmark"
version = "0.1.0"
authors = ["killzoner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "3.0.1"
log = "0.4.8"
simple_logger = "1.6.0"
byteorder = "1.3.4"
num-traits = "0.2.11"